fixed wrapping bug

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -57,7 +57,8 @@ body {
 }
 
 .g-list{
-  columns: 5;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 li{
